# qroma-project-generator

./: .gitignore  .gitmodules  README.md  TODOS.md  copy_to_downloads_directory.py  package-and-test-pb-compile.bat  package-and-test-project-generator.bat  package-and-test-protobuf-compile.bat  package-lock.json  package-qroma-project-generator.bat  package.json  pyinstaller-module-test.bat  pyinstaller_module_test.spec  pyproject.toml  qroma-cli.spec  requirements.txt
docker_tooling/: README.md
docker_tooling/protobuf-builder/: Dockerfile  create-docker-image.bat  create-image-and-run-test-build.bat  docker-protobuf-compile.bat  docker-protobuf-compile.zsh
examples/hello-qroma-with-pb-response/: README.md  qroma.toml
examples/hello-qroma-with-str-response/: LICENSE  README.md  qroma.toml
examples/qroma-math-async-response/: README.md  qroma.toml
examples/qroma-monitor/: README.md  qroma.toml
examples/qroma-monitor/apps/py-qroma-io/: README.md  py_qroma_control.py  pyproject.toml  qroma_monitor.py
examples/qroma-monitor/apps/py-qroma-io/qroma_proto/: qroma_monitor_pb2.py
project_template_resources/: NOTES.md
src/: build_info.py  build_project.py  compile_protobuf.py  config.py  constants.py  devboard_build_arduino.py  devboard_build_platformio.py  device_boards.py  docker.py  env_checks.py  generate_project.py  git_qroma_utils.py  index.ts  project_template.py  pyinstaller_module_test.py  pyproject.toml  qroma-cli-old.py  qroma-cli.py  qroma_defaults.py  qroma_dir_defaults.py  qroma_dirs.py  qroma_enums.py  qroma_project.py  qroma_project_config.py  qroma_types.py  run_project.py  toml_test.py  typer_project_generator.py  typer_validators.py  utils.py  version_info.py  www_sites.py  yml_test.py
src/build_firmware/: build_arduino.py  build_platformio.py
src/build_frameworks/: build_arduino.py  build_platformio.py  device_board_templates.py  device_boards.py  include_header_generators.py
src/commands/: app.py  (+8 more)
(+174 files in other folders)
