[tool.poetry]
name = "qroma-project-generator"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
readme = "README.md"
packages = [{include = "qroma_project_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
