[tool.poetry]
name = "qroma-project-generator"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
readme = "README.md"
packages = [{include = "qroma_project_generator"}]

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.28.2"
typer = "^0.7.0"
pydantic = "^1.10.6"
tomli-w = "^1.0.0"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
pytest = "^7.2.2"
pyinstaller = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
