[tool.poetry]
name = "py-qroma-io"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
readme = "README.md"
packages = [{include = "py_qroma_io"}]

[tool.poetry.dependencies]
python = "^3.11"
py-qroma = {path = "C:/Users/ajb/Projects/qromatech/py-qroma", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
